fix: Contact page navbar improvement and change the vertical scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -7124,8 +7124,8 @@ input.email {
 	
 	.w3_navigation_pos {
 		position: static;
-		margin-left: -1.5em;
-		margin-top: -2em;
+		margin-left: 0.2rem;
+		margin-top: 0.1rem;
 		float: left;
 	}
 
